--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 
 #wrapper {
-    background-color: #FF9D73;
+    background-color: white;
 	margin: 0 auto;
 	padding: 20px;
 	border: 3px solid #333;
@@ -24,34 +24,69 @@
 #status{
   border: 1.5px solid;
   background-color: #FFC473;
+  padding: 20px;
+  margin-top: 30px;
 }
 
 #rhythmStates{
   border: 1.5px solid;
   background-color: #F26D93;
+  padding: 8px;
 }
+
 #vf{
   height: 50px;
 }
 #info{
-  margin-top: -10px;
+  margin-top: -20px;
   border:1.5px solid;
-  height: 250px;
-  width: 320px;
+  height: 270px;
+  width: 500px;
   overflow: scroll;
   background-color: white;
-  float:right;
-  
 }
+
+#ecg{
+    background-color: white;
+    margin-left: 0px;
+    margin-bottom:20px;
+    padding: 10px;
+	border: 3px solid #333;
+	width: 600px;
+    height: 100px;
+}
+
+#authorship{
+    background-color: white;
+    margin: 0 auto;
+    padding: 20px;
+	border: 3px solid #333;
+	width: 900px;
+}
+
+
 .left {
 	margin-right: 30px;
 	float: left;
-    padding: 10px;
+    padding: 20px;
 }
+
+.right{
+  margin-right: 30px;
+  float: right;
+  padding: 20px;
+}
+
 .clear {
 	clear: both;
 }
-h1 { margin-bottom: 10px; border-bottom: 2px solid #000; }
+
+h1 { margin-bottom: 10px; border-bottom: 3px solid #000; }
+
+h2 { margin-bottom: 10px; border-bottom: 2px solid #000; }
+
+h3 { margin-bottom: 10px; border-bottom: 1px solid #000; }
+
 span {
 	margin-bottom: 10px;
 	width: 200px;
@@ -62,8 +97,9 @@ input[type] {
 	width: 50px;
 	height: 30px;
     margin-left: 20px;
-  float:right;
+    float:right;
 }
+
 button {
 	margin-bottom: 10px;
 	border: 1px solid #000;
@@ -87,12 +123,14 @@ button {
 }
 
 #clock {
-  width: 45px;
-  height: 45px;
+  width: 180px;
+  height: 100px;
+  border: 1px solid #000;
   position: relative;
-  background: #FF9D73;
+  background: #FF4;
   overflow: hidden;
   margin-bottom: 10px;
+  padding: 10px
 }
 
 .pie {
